; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_misc.c_ECPGstatus.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_misc.c_ECPGstatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32, i32* }

@ECPG_NOT_CONN = common dso_local global i32 0, align 4
@ECPG_SQLSTATE_ECPG_INTERNAL_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ECPGstatus(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.connection*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call %struct.connection* @ecpg_get_connection(i8* %7)
  store %struct.connection* %8, %struct.connection** %6, align 8
  %9 = load %struct.connection*, %struct.connection** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ecpg_init(%struct.connection* %9, i8* %10, i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

15:                                               ; preds = %2
  %16 = load %struct.connection*, %struct.connection** %6, align 8
  %17 = getelementptr inbounds %struct.connection, %struct.connection* %16, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %28

20:                                               ; preds = %15
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @ECPG_NOT_CONN, align 4
  %23 = load i32, i32* @ECPG_SQLSTATE_ECPG_INTERNAL_ERROR, align 4
  %24 = load %struct.connection*, %struct.connection** %6, align 8
  %25 = getelementptr inbounds %struct.connection, %struct.connection* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @ecpg_raise(i32 %21, i32 %22, i32 %23, i32 %26)
  store i32 0, i32* %3, align 4
  br label %29

28:                                               ; preds = %15
  store i32 1, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %20, %14
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local %struct.connection* @ecpg_get_connection(i8*) #1

declare dso_local i32 @ecpg_init(%struct.connection*, i8*, i32) #1

declare dso_local i32 @ecpg_raise(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
